force-app/main/default/objects/Error_List__mdt/Error_List__mdt.object-meta.xml
<CustomObject>
    <label>Error List</label>
    <pluralLabel>Errors list</pluralLabel>
</CustomObject>