force-app/main/default/objects/Error_List__mdt/fields/Error_code__c.field-meta.xml
<CustomField>
    <fullName>Error_code__c</fullName>
    <label>Error code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>