force-app/main/default/objects/Error_List__mdt/fields/Error_message__c.field-meta.xml
<CustomField>
    <fullName>Error_message__c</fullName>
    <label>Error message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>