force-app/main/default/objects/Error_List__mdt/fields/Error_Origin__c.field-meta.xml
<CustomField>
    <fullName>Error_Origin__c</fullName>
    <label>Error Origin</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>