force-app/main/default/objects/Error_List__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
                <default>true</default>
                <label>DE</label>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>